--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ rand = {version = "0.8"}
 getrandom = {version="0.2", features=["js"]}
 log = "0.4"
 wasm-logger = "0.2"
+itertools = "0.10.5"
 
 [dependencies.web-sys]
 version = "0.3.4"
